added classes for graph view model